--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,9 +1,10 @@
 ######## LABEL ########
+#label.piano_formativo.id=label.id
 #message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
-Email=email non valida
 AuditCollectionChangeTypeEnum.ADDED=Aggiunto
 AuditCollectionChangeTypeEnum.CHANGED=Modificato
 AuditCollectionChangeTypeEnum.REMOVED=Elminato
+Email=email non valida
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ATTO_COSTITUIVO=Modifica Atto Costitutivo e statuto
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_ESCLUSIONE=Modifica Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_LEGALE=Modifica Dichiarazione del Legale Rappresentante
@@ -424,16 +425,16 @@ label.allega_contratti_sponsor=Allega Contratti Sponsor
 label.allegati=Allegati
 label.allegati_note_osservazioni=Allegati Note e Osservazioni
 label.allegati_note_osservazioni_integrazione_preavviso_rigetto=Note e Osservazioni sull'Integrazione e/o sul Preavviso di Rigetto
-label.allegato=Allegato
 label.allegato.attoCostitutivo=Allegato - Atto Costitutivo e statuto
 label.allegato.dichiarazioneEsclusione=Allegato - Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
-label.allegato.esperienzaFormazione=Allegato - Esperienza formazione in ambito sanitario
-label.allegato.utilizzo=Allegato - Utilizzo di sedi, strutture ed attrezzature di altro soggetto
-label.allegato.sistemaInformatico=Allegato - Sistema informatico dedicato alla formazione in ambito sanitario
-label.allegato.pianoQualita=Allegato - Piano di Qualità
 label.allegato.dichiarazioneLegale=Allegato - Dichiarazione del Legale Rappresentante
-label.allegato.richiestaAccreditamentoStandard=Allegato - Richiesta di Accreditamento Standard
+label.allegato.esperienzaFormazione=Allegato - Esperienza formazione in ambito sanitario
+label.allegato.pianoQualita=Allegato - Piano di Qualità
 label.allegato.relazioneAttivitaFormativa=Allegato - Relazione sull'Attività Formativa
+label.allegato.richiestaAccreditamentoStandard=Allegato - Richiesta di Accreditamento Standard
+label.allegato.sistemaInformatico=Allegato - Sistema informatico dedicato alla formazione in ambito sanitario
+label.allegato.utilizzo=Allegato - Utilizzo di sedi, strutture ed attrezzature di altro soggetto
+label.allegato=Allegato
 label.allegatoComunicazione=Inserisci Allegato
 label.allegatoDecadenza=Documento di decadenza
 label.allegatoRisposta=Inserisci Allegato
@@ -452,9 +453,9 @@ label.ambito_list=Ambito
 label.anagrafe_regionale_crediti=Anagrafe Regionale Crediti
 label.anagrafe_regionale_crediti_anno=Anagrafe Regionale Crediti - Anno {0}
 label.anagrafe_regionale_crediti_info={0} {1} {2} - Acquisito {3} Crediti nell''anno {4}
+label.anagrafica.id=Anagrafica Id
 label.anagrafica_salvata=Anagrafica Salvata
 label.anagrafica_salvata=L'anagrafica è stata salvata con successo
-label.anagrafica.id=Anagrafica Id
 label.anagrafiche=Anagrafiche
 label.anagrafiche_evento=Anagrafiche Relative agli Eventi
 label.anagrafiche_provider=Anagrafiche del provider
@@ -465,6 +466,7 @@ label.anno=Anno {0}
 label.anno_riferimento=Anno Riferimento
 label.annulla=Annulla
 label.aperta=Aperta
+label.appartiene_a_obiettivo_strategico_nazionale=Obiettivo strategico Nazionale?
 label.applica=Applica
 label.apri_tutte=Apri tutte
 label.archivia=Archivia
@@ -617,12 +619,12 @@ label.dashboard_provider=Provider dashboard
 label.dashboard_referee=Referee dashboard
 label.dashboard_segreteria=Segreteria dashboard
 label.data=Data
+label.dataModifica=Data modifica
 label.data_creazione=Data Creazione
 label.data_fine=Data fine
 label.data_fine_accreditamento=Data Fine Accreditamento
 label.data_inizio=Data inizio
 label.data_invio=Data invio
-label.dataModifica=Data modifica
 label.data_ora_scadenza_valutazione=Data e Ora scadenza Valutazione
 label.data_pagamento=Data Pagamento
 label.data_protocollo=Data Protocollo
@@ -634,8 +636,8 @@ label.data_valutazione=Data valutazione
 label.data_verifica_loco=Data della verifica in loco
 label.date=Date
 label.date_intermedie=Date intermedie
-label.dati_accreditamento=Dati Accreditamento
 label.dati_accreditamento.id=Dati Accreditamento - Id
+label.dati_accreditamento=Dati Accreditamento
 label.dati_attività=Dati dell'attività
 label.dati_dei_responsabili=Dati dei Responsabili
 label.dati_del=Dati del
@@ -645,20 +647,24 @@ label.dati_del_organizzatore=Dati dell'Organizzatore
 label.dati_del_provider=Dati del provider
 label.dati_del_richiedente=Richiedente
 label.dati_di_accreditamento=Dati di accreditamento
-label.dati_economici=Dati economici
-label.dati_economici.fatturatoComplessivoAnnoUno=Dati economici - Fatturato o Costi complessivi degli ultimi 3 anni - Primo
-label.dati_economici.fatturatoComplessivoAnnoDue=Dati economici - Fatturato o Costi complessivi degli ultimi 3 anni - Secondo
-label.dati_economici.fatturatoComplessivoAnnoTre=Dati economici - Fatturato o Costi complessivi degli ultimi 3 anni - Terzo
-label.dati_economici.fatturatoFormazioneAnnoUno=Dati economici - Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni - Primo
-label.dati_economici.fatturatoFormazioneAnnoDue=Dati economici - Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni - Secondo
-label.dati_economici.fatturatoFormazioneAnnoTre=Dati economici - Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni - Terso
 label.dati_economici.estrattoBilancioComplessivo=Dati economici - Estratto del bilancio complessivo degli ultimi 3 anni
 label.dati_economici.estrattoBilancioFormazione=Dati economici - Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
+label.dati_economici.fatturatoComplessivoAnnoDue=Dati economici - Fatturato o Costi complessivi degli ultimi 3 anni - Secondo
+label.dati_economici.fatturatoComplessivoAnnoTre=Dati economici - Fatturato o Costi complessivi degli ultimi 3 anni - Terzo
+label.dati_economici.fatturatoComplessivoAnnoUno=Dati economici - Fatturato o Costi complessivi degli ultimi 3 anni - Primo
+label.dati_economici.fatturatoFormazioneAnnoDue=Dati economici - Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni - Secondo
+label.dati_economici.fatturatoFormazioneAnnoTre=Dati economici - Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni - Terso
+label.dati_economici.fatturatoFormazioneAnnoUno=Dati economici - Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni - Primo
+label.dati_economici=Dati economici
 label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
 label.dati_legale=Dati del Legale
 label.dati_legale_login=Dati del\nLegale Rappresentante
 label.dati_non_inseriti= (dati non inseriti)
 label.dati_struttura=Dati della Struttura
+label.dati_struttura_funzionigramma=Dati della Struttura - Funzionigramma
+label.dati_struttura_numero_dipendenti_altro=Dati della Struttura - Numero dipendenti dedicati alla formazione Altro personale
+label.dati_struttura_numero_dipendenti_indeterminato=Dati della Struttura - Numero dipendenti dedicati alla formazione Tempo Indeterminato
+label.dati_struttura_organigramma=Dati della Struttura - Organigramma
 label.dati_verbale=Dati della valutazione sul campo
 label.dato_non_inserito=Dato non inserito
 label.decreto_accreditamento=Decreto Accreditamento
@@ -980,6 +986,7 @@ label.modifica_verbale_valutazione_sul_campo=Modifica del Verbale della Valutazi
 label.moduli=Moduli
 label.mostra=Mostra
 label.mostra_invii_precedenti=Mostra invii precedenti
+label.mostra_registro_operazioni=Mostra registro operazioni
 label.mostra_riepilogo=Mostra riepilogo domanda
 label.mostra_riepilogo_piano_formativo=Mostra riepilogo piano formativo
 label.mostra_riepilogo_valutazioni=Mostra riepilogo valutazione
@@ -1064,10 +1071,6 @@ label.note_osservazioni_preavviso_rigetto=Note e Osservazioni sul Preavviso di R
 label.notifica_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento precedentemente registrato era di: {0}, verrà ora aggiornato con il valore di: {1} crediti. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {2}
 label.notifica_non_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento rimane di: {0}. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {1}
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
-label.dati_struttura_numero_dipendenti_indeterminato=Dati della Struttura - Numero dipendenti dedicati alla formazione Tempo Indeterminato
-label.dati_struttura_numero_dipendenti_altro=Dati della Struttura - Numero dipendenti dedicati alla formazione Altro personale
-label.dati_struttura_funzionigramma=Dati della Struttura - Funzionigramma
-label.dati_struttura_organigramma=Dati della Struttura - Organigramma
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.numero_partecipanti=Numero dei partecipanti
 label.numero_partecipanti=Numero partecipanti
@@ -1095,7 +1098,6 @@ label.obiettivo_formativo=Obiettivo Formativo
 label.obiettivo_formativo_nazionale=Obiettivo Strategico Nazionale / area di acquisizione competenze
 label.obiettivo_formativo_regionale=Obiettivo Strategico Regionale
 label.obiettivo_strategico_nazionale=Obiettivo strategico Nazionale / Aree di acquisizione competenze
-label.appartiene_a_obiettivo_strategico_nazionale=Obiettivo strategico Nazionale?
 label.obiettivo_strategico_regionale=Obiettivo strategico Regionale
 label.oggetto=Oggetto:
 label.oggetto_discussione=Motivazione
@@ -1134,10 +1136,9 @@ label.percezione_interesse_commerciale_sanita=Percezione Evento Interesse Commer
 label.permessi=Permessi
 label.persone=Persone
 label.pfa_provider=Piano Formativo del Provider
-#label.piano_formativo.id=label.id
-label.piano_formativo.annoPianoFormativo=Relativo all''anno
 label.pianoFormativo=Piano Formativo
 label.pianoQualita=Piano di Qualità
+label.piano_formativo.annoPianoFormativo=Relativo all''anno
 label.piano_formativo=Piano Formativo
 label.piano_formativo_anno=Piano Formativo relativo all''anno {0}
 label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il {0}
@@ -1151,6 +1152,7 @@ label.posticipo_inserimento_relazione_annuale=Inserimento relazione annuale
 label.posticipo_scadenza_pagamento=Data scadenza pagamento
 label.posticipo_scadenza_rendicontazione=Data scadenza rendicontazione
 label.preavvisoRigetto=in preavviso di rigetto
+label.prefix=Prefix
 label.prendi_in_carica=Prendi in Carico
 label.presa_in_carico_da=Presa in carico da
 label.presa_visione=Presa visione
@@ -1172,7 +1174,6 @@ label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisc
 label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
-label.prefix=Prefix
 label.programma=Programma
 label.programma_attività_formativa=Programma attività formativa
 label.programma_del=Programma del
@@ -1211,6 +1212,7 @@ label.referente_informatico=Referente Informatico
 label.regione=Regione
 label.registrati=Sei un nuovo utente? Registrati
 label.registrazione_provider=Registrazione Provider
+label.registro_operazioni=Registro Operazioni
 label.relazioneAnnuale=Relazione Annuale
 label.relazioneAttivitaFormativa=Relazione sull'Attività Formativa
 label.relazioneFinale=Relazione Finale
@@ -1374,9 +1376,9 @@ label.tempo_dedicato=Tempo Dedicato
 label.tempo_dedicato=Tempo Dedicato
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo=Tipo
-label.tipo_domanda=Tipologia domanda
 label.tipoOrganizzatore_nome=Tipologia
 label.tipo_accreditamento=Tipo Accreditamento
+label.tipo_domanda=Tipologia domanda
 label.tipo_materiale_rilasciato=Tipo materiale durevole rilasciato ai partecipanti
 label.tipo_organizzatore=Tipo Organizzatore
 label.tipo_provider=Tipo:
@@ -1384,12 +1386,12 @@ label.tipologia=Tipologia:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
 label.tipologia_formativa=Tipologia Formativa
-label.tipologia_formativa_tipologiaAccreditamento=Tipologia Formativa - Accreditamento per tipologia
-label.tipologia_formativa_procedure_formative_tipologia=Tipologia Formativa - Tipologia dell'offerta formativa
-label.tipologia_formativa_professioniAccreditamento=Tipologia Formativa - Accreditamento per professioni
-label.tipologia_formativa_professioniAccreditamento=Tipologia Formativa - Accreditamento per professioni
-label.tipologia_formativa_professioni=Tipologia Formativa - Professioni
 label.tipologia_formativa_discipline=Tipologia Formativa - Discipline
+label.tipologia_formativa_procedure_formative_tipologia=Tipologia Formativa - Tipologia dell'offerta formativa
+label.tipologia_formativa_professioni=Tipologia Formativa - Professioni
+label.tipologia_formativa_professioniAccreditamento=Tipologia Formativa - Accreditamento per professioni
+label.tipologia_formativa_professioniAccreditamento=Tipologia Formativa - Accreditamento per professioni
+label.tipologia_formativa_tipologiaAccreditamento=Tipologia Formativa - Accreditamento per tipologia
 label.tipologia_list=Tipologia
 label.tipologia_obiettivi_formativi=Obiettivi formativi
 label.tipologia_sede=Tipologia Sede
