--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1565,3 +1565,4 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.can_insert_nuova_domanda_accreditamento_provvisorio=Inserimento domanda accreditamento provvisorio
