pdf anagrafe regionale

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -499,6 +499,7 @@ label.cambia_password=Cambia password
 label.cambiato_dal_provider=Modificato dal Provider
 label.cambio_password=Cambio password
 label.campo=Campo
+label.can_insert_nuova_domanda_accreditamento_provvisorio=Inserimento domanda accreditamento provvisorio
 label.cancellato=Cancellato
 label.caninsert_domanda_accreditamento_standard=Inserimento Domanda Accreditamento Standard
 label.caninsert_domanda_accreditamento_standard_scadenza=Scadenza Inserimento Domanda Accreditamento Standard
@@ -1303,6 +1304,7 @@ label.scelta_procedura_formativa_evento=Scelta della Procedura Formativa dell'Ev
 label.schedaQualitaPercepita=Scheda Qualità Percepita
 label.scheda_provider=Scheda provider
 label.scheda_qualita_percepita=Scheda Qualità Percepita
+label.scheda_riepilogativa_crediti_codiceFiscale_annoRiferimento=Scheda riepilogativa dei crediti maturati dal professionista {0} relativi all''anno {1}
 label.sede=Sede
 label.sede_di=Sede di
 label.sede_legale=Sede Legale
@@ -1407,6 +1409,7 @@ label.to_provider_multipli=A: destinatari multipli
 label.to_segreteria=A: Segreteria ECM
 label.torna_in_visualizzazione=Torna in visualizzazione
 label.torna_login=Torna alla pagina di login
+label.totale_crediti=Totale crediti: {0}
 label.totale_eventi_defintivi=Totale eventi rendicontati (incluso riedizioni)
 label.totale_eventi_defintivi_no_riedizioni=Eventi rendicontati nell'anno (escluso riedizioni)
 label.totale_ore=Totale ore
@@ -1565,4 +1568,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.can_insert_nuova_domanda_accreditamento_provvisorio=Inserimento domanda accreditamento provvisorio
