modifiche pdf verbale

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1304,7 +1304,7 @@ label.scelta_procedura_formativa_evento=Scelta della Procedura Formativa dell'Ev
 label.schedaQualitaPercepita=Scheda Qualità Percepita
 label.scheda_provider=Scheda provider
 label.scheda_qualita_percepita=Scheda Qualità Percepita
-label.scheda_riepilogativa_crediti_codiceFiscale_annoRiferimento=Scheda riepilogativa dei crediti maturati dal professionista {0} relativi all''anno {1}
+label.scheda_riepilogativa_crediti_codiceFiscale_annoRiferimento=Scheda riepilogativa dei crediti maturati dal professionista {1} {2} {0} relativi all''anno {3}
 label.sede=Sede
 label.sede_di=Sede di
 label.sede_legale=Sede Legale
@@ -1568,3 +1568,4 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.ending_verbale=Di quanto sopra attestato, è stato redatto il presente verbale composto da n°      pagine, comprensive degli allegati, e copia del quale viene rilasciata al Legale Rappresentante. \nLetto, confermato e sottoscritto alle ore      \nData     \nFirma Componenti CRECM\nFirma Componente Osservatorio Regionale\nFirma Segreteria ECM\nFirma Legale Rappresentante Provider\nFirma del delegato del Legale Rappresentante Provider
