modifiche accreditamento provvisorio come da task: 11480

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,3 +1,4 @@
+
 ######## LABEL ########
 #label.piano_formativo.id=label.id
 #message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
@@ -730,6 +731,7 @@ label.elimina=Elimina
 label.elimina_tutti_eventi_da_pfa=Elimina tutti gli eventi dal Piano Formativo
 label.email=E-mail
 label.enabled=Abilitato
+label.ending_verbale=Di quanto sopra attestato, è stato redatto il presente verbale composto da n°      pagine, comprensive degli allegati, e copia del quale viene rilasciata al Legale Rappresentante. \nLetto, confermato e sottoscritto alle ore      \nData     \nFirma Componenti CRECM\nFirma Componente Osservatorio Regionale\nFirma Segreteria ECM\nFirma Legale Rappresentante Provider\nFirma del delegato del Legale Rappresentante Provider
 label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
@@ -1187,6 +1189,7 @@ label.provider_confermato_crediti=Il provider ha confermato i crediti formativi?
 label.provider_filter=Filtro Provider:
 label.provider_gruppoA=Provider di Gruppo A
 label.provider_gruppoB=Provider di Gruppo B
+label.provider_ha_richiesto_conclusione_procedimento=(il Provider ha chiesto di interrompere il procedimento di accreditamento)
 label.provider_lista=Lista dei provider
 label.provider_provvisorio=Provider Provvisorio
 label.provider_standard=Provider Standard
@@ -1225,6 +1228,7 @@ label.rendiconto=Rendiconto
 label.reportPartecipanti=Report Partecipanti
 label.reportPartecipantiCSV=File CSV caricato
 label.reportPartecipantiXML=File XML
+label.report_rendicontazione=Report della Rendicontazione
 label.required_fatturato=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato soprastanti)
 label.required_fatturato_personale_sanitario=(obbligatorio solo nel caso siano stati compilati i campi relativi al fatturato del personale sanitario nella sezione Dati Accreditamento)
 label.reset_message=Inserire l'e-mail utilizzata durante la registrazione. Si riceverà una nuova password via e-mail.
@@ -1267,13 +1271,14 @@ label.riedita=Riedita
 label.riedizione_evento=Crea Riedizione
 label.riepilogo=Riepilogo
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
-label.riepilogo_domandaTipo_domandaId_domandaStato_providerDenominazione=Riepilogo della Domanda di Accreditamento {0}: {1}, in stato {2}, richiesta dal Provider {3}
+label.riepilogo_domandaTipo_providerDenominazione_providerId=Riepilogo della Domanda di Accreditamento {0}, richiesta dal Provider {1}, ID {2}
 label.riepilogo_evento=Riepilogo dell''Evento {0}
-label.riepilogo_pf_domandaTipo_domandaId_providerDenominazione=Riepilogo degli Eventi inseriti nel Piano Formativo dell''anno {0} relativo alla Domanda di Accreditamento {1}: {2}, richiesta dal Provider {3}
+label.riepilogo_pf_domandaTipo_providerDenominazione_providerId=Riepilogo degli Eventi inseriti nel Piano Formativo dell''anno {0} relativo alla Domanda di Accreditamento {1}, richiesta dal Provider {2}, ID {3}
 label.riepilogo_piano_formativo=Riepilogo degli Eventi inseriti nel Piano Formativo
 label.riepilogo_valutazione=Riepilogo Valutazione
 label.riepilogo_valutazione_accreditamento=Valutazione dell''Accreditamento {0} ({1})
 label.riepilogo_valutazione_domandaTipo_domandaId_providerDenominazione_valutatoreFullNome=Riepilogo della Valutazione eseguita dall''utente {0} e relativa alla Domanda di Accreditamento {1}: {2}, richiesta dal Provider {3}
+label.riepilogo_valutazione_valutatoreFullNome_domandaTipo_providerDenominazione_providerId=Riepilogo della Valutazione eseguita dall''utente {0} relativo alla Domanda di Accreditamento {1}, richiesta dal Provider {2}, ID {3}
 label.riepilogo_valutazioni_complessive=Riepilogo delle Valutazioni Complessive
 label.riepilogo_valutazioni_storicizzate=Riepilogo delle valutazioni in storico
 label.rimuovi=Rimuovi
@@ -1568,5 +1573,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.ending_verbale=Di quanto sopra attestato, è stato redatto il presente verbale composto da n°      pagine, comprensive degli allegati, e copia del quale viene rilasciata al Legale Rappresentante. \nLetto, confermato e sottoscritto alle ore      \nData     \nFirma Componenti CRECM\nFirma Componente Osservatorio Regionale\nFirma Segreteria ECM\nFirma Legale Rappresentante Provider\nFirma del delegato del Legale Rappresentante Provider
-label.report_rendicontazione=Report della Rendicontazione
