modifiche accreditamento standard come da task: #11489

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -667,7 +667,6 @@ label.dati_struttura_funzionigramma=Dati della Struttura - Funzionigramma
 label.dati_struttura_numero_dipendenti_altro=Dati della Struttura - Numero dipendenti dedicati alla formazione Altro personale
 label.dati_struttura_numero_dipendenti_indeterminato=Dati della Struttura - Numero dipendenti dedicati alla formazione Tempo Indeterminato
 label.dati_struttura_organigramma=Dati della Struttura - Organigramma
-label.dati_verbale=Dati della valutazione sul campo
 label.dato_non_inserito=Dato non inserito
 label.decreto_accreditamento=Decreto Accreditamento
 label.decreto_diniego=Decreto Diniego
@@ -731,7 +730,7 @@ label.elimina=Elimina
 label.elimina_tutti_eventi_da_pfa=Elimina tutti gli eventi dal Piano Formativo
 label.email=E-mail
 label.enabled=Abilitato
-label.ending_verbale=Di quanto sopra attestato, è stato redatto il presente verbale composto da n°      pagine, comprensive degli allegati, e copia del quale viene rilasciata al Legale Rappresentante. \nLetto, confermato e sottoscritto alle ore      \nData     \nFirma Componenti CRECM\nFirma Componente Osservatorio Regionale\nFirma Segreteria ECM\nFirma Legale Rappresentante Provider\nFirma del delegato del Legale Rappresentante Provider
+label.ending_verbale=Di quanto sopra attestato, è stato redatto il presente verbale composto da n°      pagine, comprensive degli allegati, e copia del quale viene rilasciata al Legale Rappresentante. \nLetto, confermato e sottoscritto alle ore      \nData     \n
 label.error=Errore
 label.error_page_title=Ops! Si è verificato un errore
 label.errore_login=Username e/o password errati
@@ -1573,3 +1572,14 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.osservazioni_provider_team_leader=Osservazioni del Provider e del Team Leader
+label.osservazioni=Osservazioni
+label.osservazioni_sulla_valutazione_sul_campo=Osservazioni sulla Valutazione sul Campo
+message.osservazioni_salvate=Osservazioni salvate con successo.
+label.accreditamento_standard_verbale_visita_in_loco=Accreditamento Standard: verbale visita in loco {1}
+label.componente_segreteria_ecm=Componente Segreteria ECM
+label.firma_nomeFirmatario=Firma {0} ({1}) :
+label.componente_crecm=Componente CRECM
+label.componente_osservatorio_regionale=Componente Osservatorio Regionale
+label.legale_rappresentante_del_provider=Legale Rappresentante del Provider
+label.delegato_legale_rappresentante_del_provider=Delegato Legale Rappresentante del Provider
