Modifiche alle Comunicazioni ed Eventi come da task:11449 e 11448

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -271,11 +271,11 @@ error.almenouno.empty=almeno uno dei campi è obbligatorio
 error.anticipazione_data_non_possibile=Non è possibile anticipare la data di inizio di un Evento già accreditato
 error.atleast_one_empty=È necessario esprimere una valutazione per ogni campo
 error.autocertificazione_non_selezionabile=Non è possibile selezionare la modalità di verifica "autocertificazione" per gli evento di tipologia divertda da "convegno/congresso"
-error.campi_con_errori_azione_ruoliATTIVITA_DI_RICERCA=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti
-error.campi_con_errori_azione_ruoliAUDIT_CLINICO_ASSISTENZIALE=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
-error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle fasi segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore (il coordinatore non è obbligatorio) \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
-error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un responsabile per azione (il responsabile non è obbligatorio)
-error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - massimo un coordinatore per azione (il coordinatore non è obbligatorio) \n - minimo 1 ora non frazionabile per le figure Partecipante
+error.campi_con_errori_azione_ruoliATTIVITA_DI_RICERCA=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - ogni ruolo non può essere inserito più di una volta
+error.campi_con_errori_azione_ruoliAUDIT_CLINICO_ASSISTENZIALE=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - ogni ruolo non può essere inserito più di una volta  \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
+error.campi_con_errori_azione_ruoliGRUPPI_DI_MIGLIORAMENTO=Alcuni campi delle fasi segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - ogni ruolo non può essere inserito più di una volta  \n - massimo un coordinatore (il coordinatore non è obbligatorio) \n - minimo 2 ore non frazionabili multiple di 2 per le figure partecipante
+error.campi_con_errori_azione_ruoliPROGETTI_DI_MIGLIORAMENTO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - ogni ruolo non può essere inserito più di una volta  \n - massimo un responsabile per azione (il responsabile non è obbligatorio)
+error.campi_con_errori_azione_ruoliTRAINING_INDIVIDUALIZZATO=Alcuni campi delle azioni segnate in rosso non sono stati inseriti correttamente, controllare: \n - tutti i campi devono essere inseriti \n - ogni ruolo non può essere inserito più di una volta  \n - massimo un coordinatore per azione (il coordinatore non è obbligatorio) \n - minimo 1 ora non frazionabile per le figure Partecipante
 error.campi_con_errori_programma_fad=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_dettaglio_attivita=Alcuni campi delle attività segnate in rosso non sono stati inseriti correttamente
 error.campi_mancanti_docenti=Alcuni campi dei docenti segnalati in rosso non sono stati inseriti correttamente
@@ -1583,3 +1583,7 @@ label.componente_crecm=Componente CRECM
 label.componente_osservatorio_regionale=Componente Osservatorio Regionale
 label.legale_rappresentante_del_provider=Legale Rappresentante del Provider
 label.delegato_legale_rappresentante_del_provider=Delegato Legale Rappresentante del Provider
+label.nuovi_messaggi=Nuovi messaggi
+label.nuovo_messaggio=Nuovo messaggio
+label.ricevuti=Ricevuti
+label.ricevuto=Ricevuto
