altre MEV ecm minori

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -407,6 +407,7 @@ label.accreditamento_invio=Data invio
 label.accreditamento_mesi_validita=Validità (mesi)
 label.accreditamento_nome=Nome
 label.accreditamento_scadenza=Data Scadenza
+label.accreditamento_standard_verbale_visita_in_loco=Accreditamento Standard: verbale visita in loco {1}
 label.accreditamento_stato=Stato Domanda
 label.accreditamento_tipo=Tipologia
 label.accreditamento_titolo={0} della Domanda di Accreditamento {1} ({2})
@@ -423,6 +424,8 @@ label.aggiungi_ruolo=Aggiungi Ruolo
 label.aggiungi_sede=Aggiungi sede
 label.allega=Allega
 label.allega_contratti_sponsor=Allega Contratti Sponsor
+label.allega_quietanza=Allega quietanza
+label.allega_quietanza_di_pagamento=Allega la quietanza di pagamento
 label.allegati=Allegati
 label.allegati_note_osservazioni=Allegati Note e Osservazioni
 label.allegati_note_osservazioni_integrazione_preavviso_rigetto=Note e Osservazioni sull'Integrazione e/o sul Preavviso di Rigetto
@@ -548,6 +551,9 @@ label.completa=Completa
 label.componente=Componente
 label.componente_comitato=Componente
 label.componente_crec_team_leader=Componente CRECM - Team Leader
+label.componente_crecm=Componente CRECM
+label.componente_osservatorio_regionale=Componente Osservatorio Regionale
+label.componente_segreteria_ecm=Componente Segreteria ECM
 label.componente_segreteria_numero=Componente Segreteria {0}
 label.componente_withName=Componente: {0}
 label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
@@ -670,10 +676,12 @@ label.dati_struttura_organigramma=Dati della Struttura - Organigramma
 label.dato_non_inserito=Dato non inserito
 label.decreto_accreditamento=Decreto Accreditamento
 label.decreto_diniego=Decreto Diniego
+label.default=Default
 label.delega=Delega
 label.delegaRichiedenteFile=Delega del richiedente
 label.delegaValutazioneSulCampo=Delega
 label.delegato_legale_rappresentante=Delegato Legale Rappresentante
+label.delegato_legale_rappresentante_del_provider=Delegato Legale Rappresentante del Provider
 label.delegato_radio=Il richiedente è stato delegato dal Legale Rappresentante
 label.demoValutazione=Valutazione Domanda
 label.denominazione_legale=Denominazione Legale
@@ -789,6 +797,7 @@ label.file_descrizione=Descrizione
 label.file_nome=File
 label.filtri=Filtra:
 label.firma_digitalmente=Firma digitalmente
+label.firma_nomeFirmatario=Firma {0} ({1}) :
 label.flag_crediti_confermati=Crediti confermati
 label.flusso_accreditamento=Flusso Accreditamento
 label.flusso_accreditamento_provvisorio=Flusso Accreditamento Provvisorio
@@ -915,6 +924,7 @@ label.iter_accreditamento=Iter Accreditamento
 label.label.rivaluta=Rivaluta
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
+label.legale_rappresentante_del_provider=Legale Rappresentante del Provider
 label.linee_guida_eventi=Linee guida eventi
 label.lingua_straniera_utilizzata=Lingua straniera utilizzata
 label.list_eventi=Lista degli eventi del provider {0}
@@ -1090,9 +1100,11 @@ label.nuova_domanda_provvisoria=Nuova domanda Provvisoria
 label.nuova_domanda_standard=Nuova domanda Standard
 label.nuova_password=Nuova Password
 label.nuova_risposta=Nuova Risposta
+label.nuovi_messaggi=Nuovi messaggi
 label.nuovo=Nuovo
 label.nuovo_evento=Nuovo Evento
 label.nuovo_evento_da_pfa=Crea Evento da PFA
+label.nuovo_messaggio=Nuovo messaggio
 label.nuovo_piano_formativo=Nuovo piano formativo
 label.nuovo_provider=Nuovo provider
 label.nuovo_utente=Nuovo Utente
@@ -1120,11 +1132,15 @@ label.organizzazione_natura=Natura dell'organizzazione
 label.osservatore_ecm=Osservatore ECM
 label.osservatore_regionale=Osservatore Regionale
 label.osservatori=Osservatori ECM
+label.osservazioni=Osservazioni
 label.osservazioni_del_provider=Osservazioni del Provider
+label.osservazioni_provider_team_leader=Osservazioni del Provider e del Team Leader
+label.osservazioni_sulla_valutazione_sul_campo=Osservazioni sulla Valutazione sul Campo
 label.osservazioni_team_valutazione=Osservazioni del Team di Valutazione
 label.pagInCorso=Pagamento in corso
 label.paga=Paga
 label.pagamenti_annuali=Pagamenti Annuali
+label.pagamento_con_myPay_settings=Modalità di pagamento con myPay \n(default dipende dal gruppo del Provider)
 label.pagato=Pagato
 label.partita_iva=Partita IVA
 label.partners=Partners
@@ -1196,6 +1212,7 @@ label.provincia=Provincia
 label.pubblica=Pubblica
 label.pulisci=Pulisci
 label.qualifica=Qualifica
+label.quietanzaPagamento=Quietanza di Pagamento
 label.quota_partecipazione=Quota di partecipazione
 label.quote_di_partecipazione=Quote di partecipazione
 label.ragione_sociale=Ragione Sociale
@@ -1253,6 +1270,8 @@ label.ricerca_docenti_or=Ricerca gli eventi che contengono almeno uno dei docent
 label.ricevuta=Ricevuta
 label.ricevute=Ricevute
 label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
+label.ricevuti=Ricevuti
+label.ricevuto=Ricevuto
 label.richiedente=Richiedente
 label.richiestaAccreditamentoStandard=Richiesta di Accreditamento Standard
 label.richiestaIntegrazione=in richiesta di integrazione
@@ -1477,6 +1496,7 @@ label.visualizza_lista_accreditamenti=Visualizza tutti gli accreditamenti
 label.visualizza_lista_allegati=Visualizza tutti gli allegati
 label.visualizza_lista_eventi=Visualizza tutti gli eventi
 label.visualizza_lista_persone=Visualizza tutte le persone
+label.visualizza_quietanza=Visualizza quietanza
 label.visualizza_valutazioni=Visualizza Valutazioni
 label.visualizzazione=Visualizzazione
 label.visualizzazione_comunicazione=Visualizzazione Comunicazione
@@ -1528,6 +1548,7 @@ message.invio_integrazione_success=Integrazione della Domanda di Accreditamento 
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale e al delegato del Legale Rappresentante.
 message.mail_inviata=Email inviata
 message.motivazione_enablefield_required=\u00C8 obbligatorio specificare una motivazione per ogni campo abilitato.
+message.osservazioni_salvate=Osservazioni salvate con successo.
 message.password_cambiata=La password è stata cambiata con successo.
 message.password_reset_completato=\u00C8 stata inviata una email con la nuova password.
 message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già inserito
@@ -1536,6 +1557,7 @@ message.presa_visione_success=Presa Visione eseguita correttamente.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_bloccato_success=Provider bloccato con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
+message.quietanza_pagamento_salvata=La Quietanza del Pagamento è stata salvata con successo.
 message.relazione_annuale_salvata=Relazione Annuale salvata con successo.
 message.richiesta_variazione_dati_inviata=Richiesta variazione dati inviata con successo.
 message.risposta_inviata=Risposta inviata con successo.
@@ -1572,18 +1594,4 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.osservazioni_provider_team_leader=Osservazioni del Provider e del Team Leader
-label.osservazioni=Osservazioni
-label.osservazioni_sulla_valutazione_sul_campo=Osservazioni sulla Valutazione sul Campo
-message.osservazioni_salvate=Osservazioni salvate con successo.
-label.accreditamento_standard_verbale_visita_in_loco=Accreditamento Standard: verbale visita in loco {1}
-label.componente_segreteria_ecm=Componente Segreteria ECM
-label.firma_nomeFirmatario=Firma {0} ({1}) :
-label.componente_crecm=Componente CRECM
-label.componente_osservatorio_regionale=Componente Osservatorio Regionale
-label.legale_rappresentante_del_provider=Legale Rappresentante del Provider
-label.delegato_legale_rappresentante_del_provider=Delegato Legale Rappresentante del Provider
-label.nuovi_messaggi=Nuovi messaggi
-label.nuovo_messaggio=Nuovo messaggio
-label.ricevuti=Ricevuti
-label.ricevuto=Ricevuto
+label.id_evento=Id Evento
