fine mev comunicazioni
(attenzione fix JS per compatibilita IE in comunicazione/new)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -422,6 +422,7 @@ label.aggiungi_domanda_in_odg=Aggiungi Domanda in Ordine del giorno
 label.aggiungi_evento=Aggiungi evento
 label.aggiungi_ruolo=Aggiungi Ruolo
 label.aggiungi_sede=Aggiungi sede
+label.alert_metodologie_interattive_res=ATTENZIONE: sono state selezionate metodologie di didattica interattiva, si ricorda che al fine di garantire un’adeguata partecipazione è necessario che il numero dei discenti sia limitato (massimo 25 partecipanti per tutor/docente)
 label.allega=Allega
 label.allega_contratti_sponsor=Allega Contratti Sponsor
 label.allega_quietanza=Allega quietanza
@@ -827,6 +828,7 @@ label.help=Help
 label.home=Torna alla Home
 label.homepage=ECM - Regione Veneto
 label.id=Id
+label.id_evento=Id Evento
 label.id_evento_link=ID evento:
 label.id_proto_batch=Id Proto Batch
 label.id_provider=Id del Provider
@@ -1594,4 +1596,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.id_evento=Id Evento
