--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -295,7 +295,7 @@ error.data_fine_non_valida=La data di fine non può essere antecedente alla data
 error.data_fine_res_non_valida=La data di fine dell'Evento deve essere compresa nello stesso anno solare della data di inizio
 error.data_fine_riedizione_non_valida=La riedizione si deve svolgere nell'anno solare di riferimento dell'Evento rieditato
 error.data_inizio_non_valida=Non è possibile inserire un Evento entro 15 giorni (Provider A) / 30 giorni (Provider B) dalla data del suo inizio.
-error.data_inizio_riedizione_non_valida=Non è possibile inserire una riedizione di un Evento entro 10 giorni dalla data del suo inizio, che deve inoltre ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato.
+error.data_inizio_riedizione_non_valida=Non è possibile inserire una riedizione di un Evento entro 10 giorni dalla data del suo inizio, questa deve inoltre ricadere nello stesso anno solare della data di fine dell'Evento che viene rieditato ed essere uguale o successiva alla sua data di inizio.
 error.data_intermedia_annullata=Non è possibile annullare la data intermedia
 error.data_intermedia_res_non_valida=Le date intermedie devono essere strettamente comprese tra la data di inizio e la data di fine
 error.data_intermedia_ripetuta=Data intermedia ripetuta
@@ -1596,3 +1596,9 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.seleziona_tutti=Seleziona tutti
+label.sposta_orario_selezionati=Sposta orario selezionati
+label.orario_non_valido=Orario non valido
+label.slittamento_orario_attivita=Slittamento dell'orario dell'attività
+label.disclaimer_modalita_spostamento_orario=Attenzione: selezionare l'orario di inizio della prima attività, le altre attività del blocco evidenziato verranno spostate automaticamente dal sistama.
+label.nessun_attivita_selezionata=Nessun attività selezionata
